# scribbly

./: .gitignore  README.md
server/: .gitignore  Cargo.toml  Deployment.md  build.rs  results.csv  results2.csv  rust-toolchain.toml  scribbly.ipynb  scribbly.py  scribly2.ipynb  scribly2.py
server/schemas/: api.bop  client.bop  common.bop
server/src/: main.rs  ml.rs  server.rs
server/src/gen_schemas/: api.rs  client.rs  common.rs
server/src/ml/: models.rs  placeholder.rs
server/src/server/: client_connection.rs  handlers.rs
web/: .gitignore  env.d.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/pb_migrations/: 1689363303_created_gameResults.js  1689363410_created_audienceVote.js  1689363435_updated_gameResults.js  1689363909_created_drawings.js  1689363984_updated_audienceVote.js  1689364015_updated_audienceVote.js
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/admin/: page.tsx
web/src/app/connecting/: page.tsx
web/src/app/game/: layout.tsx  page.tsx
web/src/app/game/audience/: page.tsx
web/src/app/game/connecting/: page.tsx
web/src/app/game/gamer/: page.tsx
web/src/app/game/gamer-submit/: page.tsx
web/src/app/gamer-submit/: page.tsx
web/src/app/results/: page.tsx
web/src/components/: Timer.tsx  Toast.tsx
web/src/hooks/: useContainerSize.ts  useDraw.ts  useError.tsx  useMediaQuery.ts  useToast.ts  useWindowSize.ts
web/src/lib/: globals.d.ts  schemas.ts  store.ts
web/src/utils/: bopUtils.ts  drawLine.ts
