[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bebop = "2.8.6"
rand = "0.8.5"
tokio = "1.29.1"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

[build-dependencies]
bebop-tools = "2.8.6"
