[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bebop = "2.8.6"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tungstenite = "0.19.0"
tokio-tungstenite = "0.19.0"
pyo3 = "0.19.1"

[build-dependencies]
bebop-tools = "2.8.6"
